<resources>
    <string name="app_name">Food Flash</string>
    <string name="mobile_no_log">Mobile Number(10 Digits)</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="preference_file_name">Food Buff preference</string>
    <string name="preference"> Food Buff Name</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="register"><u>Not Registered yet? Sign Up</u></string>
    <string name="name_hint">Name( Min. 3 Characters)</string>
    <string name="register_btn">REGISTER</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_2">Password(Min 4 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_notice">Enter Your Registered Phone Number and Email Address Below:</string>
    <string name="next">NEXT</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="shared2">RestaurantPreference2</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question1">Q1. How will the training be delivered?</string>
    <string name="answer1">A1. You will be taught using pre-recorded videos and text tutorials.The training has quizzes,assignments,and tests to help you learn better.At the end of the training,you will attempt a project to get hands-on practice of what you learn during your training.</string>
    <string name="question2">Q2. What will be the timings of the training?</string>
    <string name="answer2">A2. As this is a purely online training program,you can choose to learn at any time of the day.We will recommend a pace to be followed throughout the program,but the actual timings and learning hours can be decided by students according to their convenience.</string>
    <string name="question3">Q3. What is the duration of training?</string>
    <string name="answer3">A3. The training duration is of 6 weeks.</string>
    <string name="question4">Q4. How much time should I spend everyday?</string>
    <string name="answer4">A4. We recommend spending 10–12 hours per week.However,the actual learning hours can be decided by you as per your convenience.</string>
    <string name="question5">Q5. When can I start my training?</string>
    <string name="answer5">A5. You can choose your preferred batch date while signing up for the training program.</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find any Restaurant with that name!!!</string>
    <string name="orderplaced">Your Order is Placed!!</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="add">Add</string>
    <string name="place_order">Place Order (Total: Rs)</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="order_hist">Your Order History is as follows:</string>
    <string name="no_orders_placed">NO ORDERS PLACED</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
</resources>