<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/room_service" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAppLogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_mobile"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/mobile_no_log"
        android:inputType="text"
        android:maxLines="1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobile"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="#eeeeee"
        android:drawableStart="@drawable/ic_pass"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPass"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorHighlight"
        android:padding="6dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="6dp"
        android:text="@string/forget_password"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="6dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="15sp" />

</RelativeLayout>